--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -2,6 +2,18 @@
 @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@400;500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap");
+@font-face {
+  font-family: "Calibri";
+  src: url("../fonts/calibri/calibri.eot"); /* IE9 Compat Modes */
+  src: url("../fonts/calibri/calibri.eot?#iefix") format("embedded-opentype"),
+    /* IE6-IE8 */ url("../fonts/calibri/calibri.otf") format("opentype"),
+    /* Open Type Font */ url("../fonts/calibri/calibri.svg") format("svg"),
+    /* Legacy iOS */ url("../fonts/calibri/calibri.ttf") format("truetype"),
+    /* Safari, Android, iOS */ url("../fonts/calibri/calibri.woff") format("woff"),
+    /* Modern Browsers */ url("../fonts/calibri/calibri.woff2") format("woff2"); /* Modern Browsers */
+  font-style: normal;
+}
 /* Plugins */
 
 /* Blocks */
@@ -38,6 +50,6 @@ p {
   padding: 0;
 }
 
-@import './src/blocks/wrapper/wrapper';
-@import './src/blocks/general/general';
-@import './src/blocks/info/info';
+@import "./src/blocks/wrapper/wrapper";
+@import "./src/blocks/general/general";
+@import "./src/blocks/info/info";
