test font Calibri

--- a/src/blocks/info/info.scss
+++ b/src/blocks/info/info.scss
@@ -21,7 +21,7 @@
             color: #ffffff;
         }
         &post {
-            font-family: Calibri;
+            font-family: Montserrat;
             font-weight: bold;
             font-size: px-to-em(15);
             line-height: px-to-per(18, 15);
