create block cotnacts

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -53,3 +53,6 @@ p {
 @import "./src/blocks/wrapper/wrapper";
 @import "./src/blocks/general/general";
 @import "./src/blocks/info/info";
+
+@import './src/blocks/contacts/contacts';
+@import './src/blocks/contact/contact';
