--- a/src/templates/blocks.pug
+++ b/src/templates/blocks.pug
@@ -3,3 +3,5 @@
 include ../blocks/wrapper/wrapper.pug
 include ../blocks/general/general.pug
 include ../blocks/info/info.pug
+include ../blocks/contacts/contacts.pug
+include ../blocks/contact/contact.pug
