create block knowledges

--- a/src/templates/blocks.pug
+++ b/src/templates/blocks.pug
@@ -1,7 +1,6 @@
-
-
 include ../blocks/wrapper/wrapper.pug
 include ../blocks/general/general.pug
 include ../blocks/info/info.pug
 include ../blocks/contacts/contacts.pug
 include ../blocks/contact/contact.pug
+include ../blocks/knowledge/knowledge.pug
