--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -53,6 +53,7 @@ p {
 @import "./src/blocks/wrapper/wrapper";
 @import "./src/blocks/general/general";
 @import "./src/blocks/info/info";
+@import "./src/blocks/contacts/contacts";
+@import "./src/blocks/contact/contact";
 
-@import './src/blocks/contacts/contacts';
-@import './src/blocks/contact/contact';
+@import './src/blocks/knowledge/knowledge';
