made css for knowledge and changed list for p

--- a/src/blocks/contact/contact.scss
+++ b/src/blocks/contact/contact.scss
@@ -24,6 +24,6 @@
         font-weight: 400;
         font-size: px-to-em(15);
         line-height: px-to-per(18, 15);
-        color: #ffffff;
+        color: $main-color;
     }
 }
