--- a/src/blocks/info/info.scss
+++ b/src/blocks/info/info.scss
@@ -18,7 +18,7 @@
             font-weight: 500;
             font-size: px-to-em(35);
             line-height: px-to-per(43, 35);
-            color: #ffffff;
+            color: $main-color;
         }
         &post {
             font-family: Montserrat;
