--- a/src/blocks/knowledge/knowledge.pug
+++ b/src/blocks/knowledge/knowledge.pug
@@ -2,10 +2,9 @@ mixin knowledge(modifier)
   .knowledge&attributes(attributes)
     .knowledge__content 
       h2.knowledge__title Industry Knowledge
-      ul.knowledge__list 
-        li.knowledge__item User Interface
-        li.knowledge__item User Experience 
-        li.knowledge__item Product Design 
-        li.knowledge__item Interaction Design
-        li.knowledge__item Design Research
-        li.knowledge__item Web Design
+      p.knowledge__item User Interface
+      p.knowledge__item User Experience 
+      p.knowledge__item Product Design 
+      p.knowledge__item Interaction Design
+      p.knowledge__item Design Research
+      p.knowledge__item Web Design
