--- a/src/blocks/general/general.scss
+++ b/src/blocks/general/general.scss
@@ -3,5 +3,7 @@
         background: rgba(196, 196, 196, 0.3);
         border-radius: 10px;
         max-width: 396px;
+        padding-top: 10px;
+        padding-bottom: 46px;
     }
 }
