create block languages

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -57,3 +57,7 @@ p {
 @import "./src/blocks/contacts/contacts";
 @import "./src/blocks/contact/contact";
 @import "./src/blocks/knowledge/knowledge";
+
+@import './src/blocks/languages/languages';
+@import './src/blocks/grey/grey';
+@import './src/blocks/white/white';
