--- a/src/templates/blocks.pug
+++ b/src/templates/blocks.pug
@@ -4,3 +4,6 @@ include ../blocks/info/info.pug
 include ../blocks/contacts/contacts.pug
 include ../blocks/contact/contact.pug
 include ../blocks/knowledge/knowledge.pug
+include ../blocks/languages/languages.pug
+include ../blocks/grey/grey.pug
+include ../blocks/white/white.pug
