create block social

--- a/src/templates/blocks.pug
+++ b/src/templates/blocks.pug
@@ -7,3 +7,4 @@ include ../blocks/knowledge/knowledge.pug
 include ../blocks/languages/languages.pug
 include ../blocks/grey/grey.pug
 include ../blocks/white/white.pug
+include ../blocks/social/social.pug
