--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -61,3 +61,4 @@ p {
 @import './src/blocks/languages/languages';
 @import './src/blocks/grey/grey';
 @import './src/blocks/white/white';
+@import './src/blocks/social/social';
