create block hobbies

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -62,3 +62,4 @@ p {
 @import './src/blocks/grey/grey';
 @import './src/blocks/white/white';
 @import './src/blocks/social/social';
+@import './src/blocks/hobbies/hobbies';
