--- a/src/templates/blocks.pug
+++ b/src/templates/blocks.pug
@@ -8,3 +8,4 @@ include ../blocks/languages/languages.pug
 include ../blocks/grey/grey.pug
 include ../blocks/white/white.pug
 include ../blocks/social/social.pug
+include ../blocks/hobbies/hobbies.pug
