--- a/src/blocks/hobbies/hobbies.scss
+++ b/src/blocks/hobbies/hobbies.scss
@@ -1,8 +1,38 @@
 .hobbies {
+    &__content {
+        margin: 0px 18px;
+        padding-top: 6px;
+    }
+    &__title {
+        font-family: "Montserrat";
+        font-weight: 700;
+        font-size: px-to-em(14);
+        line-height: px-to-per(18, 14);
+        color: $main-color;
+        background: rgba(196, 196, 196, 0.35);
+        border-radius: 10px;
+        padding: 6px 14px;
+        margin-bottom: 12px;
+        max-width: 88px;
+    }
     &__hobbies {
         display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin: 0 14px;
+    }
+    &__block {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
     &__text {
         display: block;
+        align-self: start;
+        font-family: "Montserrat";
+        font-weight: 700;
+        font-size: px-to-em(10);
+        line-height: px-to-per(18, 10);
+        color: #e5e5e5;
     }
 }
