--- a/src/templates/blocks.pug
+++ b/src/templates/blocks.pug
@@ -9,3 +9,5 @@ include ../blocks/grey/grey.pug
 include ../blocks/white/white.pug
 include ../blocks/social/social.pug
 include ../blocks/hobbies/hobbies.pug
+include ../blocks/sidebar/sidebar.pug
+include ../blocks/stitle/stitle.pug
