create block exp

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -66,3 +66,5 @@ p {
 @import "./src/blocks/hobbies/hobbies";
 @import "./src/blocks/sidebar/sidebar";
 @import "./src/blocks/stitle/stitle";
+
+@import './src/blocks/exp/exp';
