--- a/src/templates/blocks.pug
+++ b/src/templates/blocks.pug
@@ -11,3 +11,4 @@ include ../blocks/social/social.pug
 include ../blocks/hobbies/hobbies.pug
 include ../blocks/sidebar/sidebar.pug
 include ../blocks/stitle/stitle.pug
+include ../blocks/exp/exp.pug
