--- a/src/blocks/exp/exp.scss
+++ b/src/blocks/exp/exp.scss
@@ -1,3 +1,35 @@
 .exp {
-  
+    &__content {
+        margin: 0 14px 12px;
+    }
+    &__company {
+        font-family: "Calibri";
+        font-weight: 700;
+        font-size: px-to-em(14);
+        line-height: px-to-per(18, 14);
+        color: $sidebar-color;
+    }
+    &__post {
+        font-family: "Calibri";
+        font-weight: 400;
+        font-size: px-to-em(14);
+        line-height: px-to-per(18, 14);
+        color: $sidebar-color;
+    }
+    &__date {
+        font-family: "Calibri";
+        font-weight: 400;
+        font-size: px-to-em(9);
+        line-height: px-to-per(18, 9);
+        color: #73808d;
+    }
+    &__text {
+        font-family: "Calibri";
+        font-weight: 400;
+        font-size: px-to-em(9);
+        line-height: px-to-per(14, 9);
+        color: rgba(0, 0, 0, 0.8);
+        margin-bottom: 12px;
+        max-width: 261px;
+    }
 }
