create block edu

--- a/src/templates/blocks.pug
+++ b/src/templates/blocks.pug
@@ -12,3 +12,4 @@ include ../blocks/hobbies/hobbies.pug
 include ../blocks/sidebar/sidebar.pug
 include ../blocks/stitle/stitle.pug
 include ../blocks/exp/exp.pug
+include ../blocks/edu/edu.pug
