--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -58,7 +58,6 @@ p {
 @import "./src/blocks/contacts/contacts";
 @import "./src/blocks/contact/contact";
 @import "./src/blocks/knowledge/knowledge";
-
 @import "./src/blocks/languages/languages";
 @import "./src/blocks/grey/grey";
 @import "./src/blocks/white/white";
@@ -66,6 +65,5 @@ p {
 @import "./src/blocks/hobbies/hobbies";
 @import "./src/blocks/sidebar/sidebar";
 @import "./src/blocks/stitle/stitle";
-
-@import './src/blocks/exp/exp';
-@import './src/blocks/edu/edu';
+@import "./src/blocks/exp/exp";
+@import "./src/blocks/edu/edu";
