--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -68,3 +68,5 @@ p {
 @import "./src/blocks/stitle/stitle";
 @import "./src/blocks/exp/exp";
 @import "./src/blocks/edu/edu";
+
+@import './src/blocks/myskills/myskills';
