--- a/src/templates/blocks.pug
+++ b/src/templates/blocks.pug
@@ -13,3 +13,4 @@ include ../blocks/sidebar/sidebar.pug
 include ../blocks/stitle/stitle.pug
 include ../blocks/exp/exp.pug
 include ../blocks/edu/edu.pug
+include ../blocks/myskills/myskills.pug
