create block othersk

--- a/src/templates/blocks.pug
+++ b/src/templates/blocks.pug
@@ -14,3 +14,4 @@ include ../blocks/stitle/stitle.pug
 include ../blocks/exp/exp.pug
 include ../blocks/edu/edu.pug
 include ../blocks/myskills/myskills.pug
+include ../blocks/othersk/othersk.pug
