--- a/src/blocks/info/info.pug
+++ b/src/blocks/info/info.pug
@@ -1,6 +1,7 @@
 mixin info(modifier)
   .info&attributes(attributes)
     img(src="img/mee.png" alt="Аватарка").info__image
-    h1.info__name Folly
-      span.info__namesurname Justin
-      span.info__namepost UI/UX Designer
+    .info__info
+      h1.info__name Folly
+      p.info__namesurname Justin
+      p.info__namepost UI/UX Designer
