--- a/src/blocks/contact/contact.scss
+++ b/src/blocks/contact/contact.scss
@@ -4,9 +4,10 @@
         justify-content: start;
         align-items: center;
         padding: 10px 0 10px 16px;
-        margin: 4px;
+        margin-bottom: 4px;
         background: rgba(196, 196, 196, 0.35);
         border-radius: 10px;
+        max-width: 260px;
         &:hover {
             transform: scale(1.04);
             @include transition;
