--- a/src/blocks/info/info.pug
+++ b/src/blocks/info/info.pug
@@ -3,5 +3,5 @@ mixin info(modifier)
     img(src="img/mee.png" alt="Аватарка").info__image
     .info__info
       h1.info__name Folly
-      p.info__namesurname Justin
-      p.info__namepost UI/UX Designer
+      h2.info__namesurname Justin
+      h2.info__namepost UI/UX Designer
