--- a/src/blocks/contact/contact.scss
+++ b/src/blocks/contact/contact.scss
@@ -3,7 +3,7 @@
         display: flex;
         justify-content: start;
         align-items: center;
-        padding: 10px 0 10px 16px;
+        padding: 6px 8px;
         margin-bottom: 4px;
         background: rgba(196, 196, 196, 0.35);
         border-radius: 10px;
@@ -14,7 +14,7 @@
         }
     }
     &__image {
-        margin-right: 34px;
+        margin-right: 18px;
     }
     &__link {
         text-decoration: none;
