--- a/src/blocks/general/general.scss
+++ b/src/blocks/general/general.scss
@@ -3,7 +3,7 @@
         background: rgba(196, 196, 196, 0.3);
         border-radius: 10px;
         max-width: 396px;
-        padding-bottom: 46px;
+        padding: 0 18px 34px 18px;
         margin-right: 6px;
     }
 }
