--- a/src/blocks/hobbies/hobbies.scss
+++ b/src/blocks/hobbies/hobbies.scss
@@ -1,6 +1,5 @@
 .hobbies {
     &__content {
-        margin: 0px 18px;
         padding-top: 6px;
     }
     &__title {
@@ -11,7 +10,8 @@
         color: $main-color;
         background: rgba(196, 196, 196, 0.35);
         border-radius: 10px;
-        padding: 6px 14px;
+        padding: 6px 8px;
+        text-align: center;
         margin-bottom: 12px;
         max-width: 88px;
     }
@@ -20,12 +20,13 @@
         justify-content: space-between;
         align-items: center;
         margin: 0 14px;
+        max-width: 228px;
     }
     &__block {
         display: flex;
         flex-direction: column;
         align-items: center;
-    }
+        }
     &__text {
         display: block;
         align-self: start;
