--- a/src/blocks/knowledge/knowledge.scss
+++ b/src/blocks/knowledge/knowledge.scss
@@ -2,8 +2,8 @@
     &__content {
         background: rgba(196, 196, 196, 0.35);
         border-radius: 10px;
-        margin: 0px 18px 12px;
-        padding-top: 6px;
+        margin-bottom: 12px;
+        padding-top: 4px;
         padding-bottom: 10px;
     }
     &__title {
@@ -12,16 +12,16 @@
         font-size: px-to-em(14);
         line-height: px-to-per(18, 14);
         color: $main-color;
-        padding-left: 22px;
+        padding-left: 12px;
     }
     &__item {
         display: flex;
-        padding-left: 12px;
+        padding-left: 8px;
         align-items: center;
         font-family: "Calibri";
         font-weight: 400;
         font-size: px-to-em(14);
-        line-height: px-to-per(18, 14);
+        line-height: 104%;
         color: #fafafa;
     }
     &__item::before {
