--- a/src/blocks/languages/languages.scss
+++ b/src/blocks/languages/languages.scss
@@ -2,7 +2,7 @@
     &__content {
         background: rgba(196, 196, 196, 0.35);
         border-radius: 10px;
-        margin: 0px 18px 12px;
+        margin-bottom: 12px;
         padding-top: 6px;
         padding-bottom: 10px;
     }
@@ -12,21 +12,20 @@
         font-size: px-to-em(14);
         line-height: px-to-per(18, 14);
         color: $main-color;
-        padding-left: 22px;
+        padding-left: 14px;
     }
     &__block {
         display: flex;
         align-items: center;
     }
     &__language {
-        padding-left: 22px;
+        padding-left: 14px;
         align-items: center;
         font-family: "Calibri";
         font-weight: 400;
         font-size: px-to-em(14);
-        line-height: px-to-per(18, 14);
+        line-height: 104%;
         color: #fafafa;
-        margin-right: 4px;
-        min-width: 62px;
+        min-width: 58px;
     }
 }
