--- a/src/blocks/edu/edu.scss
+++ b/src/blocks/edu/edu.scss
@@ -1,11 +1,11 @@
 .edu {
     &__content {
-        margin: 0 14px 12px;
+        margin: 0 0 4px 10px
     }
     &__college {
         font-family: "Calibri";
         font-weight: 700;
-        font-size: px-to-em(14);
+        font-size: 0.8em;
         line-height: px-to-per(18, 14);
         color: $sidebar-color;
     }
@@ -13,7 +13,7 @@
         font-family: "Calibri";
         font-weight: 400;
         font-size: px-to-em(14);
-        line-height: px-to-per(18, 14);
+        line-height: 88%;
         color: $sidebar-color;
     }
     &__date {
@@ -22,6 +22,6 @@
         font-size: px-to-em(9);
         line-height: px-to-per(18, 9);
         color: #73808d;
-        margin-bottom: 12px;
+        margin-bottom: 8px;
     }
 }
