--- a/src/blocks/myskills/myskills.scss
+++ b/src/blocks/myskills/myskills.scss
@@ -1,6 +1,6 @@
 .myskills {
     &__content {
-        margin: 0 14px 0px;
+        margin-left: 8px;
     }
     &__skills {
         display: flex;
@@ -11,10 +11,16 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        min-width: 80px;
-        margin: 18px 8px 14px;
+        margin: 4px 8px 6px;
+        &:first-child{
+            margin-right: 14px;
+        }
+        &:nth-child(4){
+            margin-left: 2px;
+        }
     }
     &__image {
+        transform: scale(0.9);
         margin-bottom: 4px;
     }
     &__text {
