--- a/src/blocks/othersk/othersk.scss
+++ b/src/blocks/othersk/othersk.scss
@@ -1,6 +1,6 @@
 .othersk {
     &__content {
-        margin: 0 14px 0px;
+        margin-left: 8px;
     }
     &__skills {
         display: flex;
@@ -11,11 +11,15 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        min-width: 80px;
-        margin: 18px 8px 14px;
+        margin: 6px 8px 14px;
+        min-width: 73px;
+        &:first-child{
+            margin-left: 2px;
+        }
     }
     &__image {
         margin-bottom: 4px;
+        transform: scale(0.9);
     }
     &__text {
         font-family: "Montserrat";
@@ -26,7 +30,7 @@
         text-align: center;
         max-width: 80px;
         text-transform: uppercase;
-        &:last-child{
+        &:last-of-type{
             text-transform: none;
         }
     }
