--- a/src/blocks/sidebar/sidebar.scss
+++ b/src/blocks/sidebar/sidebar.scss
@@ -2,7 +2,7 @@
     &__content {
         background: $main-color;
         border-radius: 10px;
-        padding: 20px 0 30px;
-        min-width: 322px;
+        padding: 14px 0 10px;
+        max-width: 291px;
     }
 }
