--- a/src/blocks/info/info.scss
+++ b/src/blocks/info/info.scss
@@ -30,6 +30,7 @@
             font-size: px-to-em(15);
             line-height: px-to-per(18,15);
             color: #cecaca;
+            white-space:nowrap;
         }
     }
 }
