--- a/src/blocks/wrapper/wrapper.pug
+++ b/src/blocks/wrapper/wrapper.pug
@@ -1,5 +1,9 @@
 mixin wrapper(modifier)
   .wrapper&attributes(attributes)
     .wrapper__content
+      //.wrapper__burg
+        .wrapper__burger
+          span.wrapper__bar
+          span.wrapper__bar
       +general
       +sidebar
