--- a/src/blocks/sidebar/sidebar.scss
+++ b/src/blocks/sidebar/sidebar.scss
@@ -4,5 +4,9 @@
         border-radius: 10px;
         padding: 14px 0 10px;
         max-width: 291px;
+        
+    }
+    @media screen and (max-width: 600px){
+        display: none;
     }
 }
