--- a/src/blocks/wrapper/wrapper.scss
+++ b/src/blocks/wrapper/wrapper.scss
@@ -1,10 +1,101 @@
+$t: 0.2s;
+$delay: 0.05s;
 .wrapper {
     &__content {
         display: flex;
         justify-content: center;
         max-width: 98%;
+        height: 116vh;
         margin: 0 auto;
         padding: 10px 14px;
         background: linear-gradient(180deg, rgba(3, 56, 244, 0.71) 0%, rgba(224, 37, 206, 0.79) 93.75%);
+    }
+    &__burger {
+        display: none;
+        cursor: pointer;
+    }
+    @media screen and (max-width: 1500px){
+        &__burg {
+            position: relative;
+            margin-left: 20px;
+            transform: scale(0.3);
+        }
+        &__burger {
+            display: block;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            overflow: hidden;
+            padding: 15px;
+            cursor: pointer;
+            &.js-active {
+                &:before {
+                    animation: slideLeft $t $delay ease-out forwards;
+                }
+                &:after {
+                    animation: slideRight $t $delay ease-out forwards;
+                }
+                .wrapper__bar {
+                    animation: rotate45 $t ease-out forwards;
+                    &:last-child {
+                        animation: rotate135 $t $t ease-out forwards;
+                    }
+                }
+            }
+            &.js-back {
+                &:before {
+                    transform: translateX(-120%);
+                    animation: slideBack $t $delay ease-out forwards;
+                }
+                &:after {
+                    transform: translateX(120%);
+                    animation: slideBack $t $delay ease-out forwards;
+                }
+                .wrapper__bar {
+                    transform: rotate(-45deg);
+                    animation: rotateBack $t ease-out forwards;
+                    &:last-child {
+                        transform: rotate(-135deg);
+                        animation: rotateBack $t $t ease-out forwards;
+                    }
+                }
+            }
+            &:before {
+                content: "";
+                display: block;
+                width: 75px;
+                height: 10px;
+                background: $main-color;
+            }
+            &:after {
+                content: "";
+                display: block;
+                width: 75px;
+                height: 10px;
+                background: $main-color;
+            }
+            .wrapper__bar {
+                display: block;
+                width: 75px;
+                height: 10px;
+                background: $main-color;
+                margin: 14px 0;
+                &:last-child {
+                    opacity: 0;
+                    transform: rotate(-45deg);
+                    position: absolute;
+                    top: 25px;
+                }
+            }
+        }
+
+    }
+    @media screen and (max-width: 600px) {
+        &__content{
+            flex-direction: column;
+            align-items: center;
+        }
+        
     }
 }
