--- a/src/blocks/general/general.pug
+++ b/src/blocks/general/general.pug
@@ -9,3 +9,6 @@ mixin general(modifier)
       +hobbies
       .general__skill.general__skill--open 
         +exp
+        +edu
+        +myskills
+        +othersk
