--- a/src/blocks/othersk/othersk.scss
+++ b/src/blocks/othersk/othersk.scss
@@ -2,6 +2,32 @@
     &__content {
         margin-left: 8px;
     }
+    &__titles {
+        display: flex;
+        align-items: center;
+        margin-bottom: 6px;
+        transform: scale(0.9) translateX(-12px); 
+        flex-wrap: nowrap;
+    }
+    &__title {
+        font-family: "Montserrat";
+        font-style: normal;
+        font-weight: 600;
+        font-size: 14px;
+        line-height: 18px;
+        color: $main-color;
+        background: $stitle-color;
+        text-transform: uppercase;
+        border-radius: 5px;
+        padding: 4px 28px;
+        min-width: 154px;
+        white-space: nowrap;
+    }
+    &__line {
+        background-color: $stitle-color;
+        min-width: 142px;
+        height: 1px;
+    }
     &__skills {
         display: flex;
         flex-wrap: wrap;
@@ -32,6 +58,67 @@
         text-transform: uppercase;
         &:last-of-type{
             text-transform: none;
+        }
+    }
+    @media screen and (max-width: 600px){
+        &__content{
+            margin-left: 0;
+        }
+        &__titles{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            background-color: $stitle-color;
+            border-radius: 5px;
+            padding: 8px 28px;
+            cursor: pointer;
+            margin-right: -10px;
+            margin-left: 10px;
+        }
+        &__titles::after{
+            content: "";
+            width: 10px;
+            height: 10px;
+            border-right: 2px solid $main-color;
+            border-bottom: 2px solid $main-color;
+            transform: rotate(45deg);
+            @include transition;
+        }
+        &__titles--open::after {
+            content: "";
+            width: 10px;
+            height: 10px;
+            border-right: 2px solid $main-color;
+            border-bottom: 2px solid $main-color;
+            transform: rotate(225deg);
+        }
+        &__title{
+            background-color: none;
+            font-family: "Montserrat";
+            font-style: normal;
+            font-weight: 600;
+            font-size: 14px;
+            line-height: 18px;
+            color: $main-color;
+            text-transform: uppercase;
+            padding: 0;
+        }
+        &__line{
+            display: none;
+        }
+        &__skills{
+            max-width: none;
+        }
+        &__skill{
+            margin: 10px 0 10px 0;
+        }
+        &__info{
+            display: none;
+            margin: 0 14px;
+            @include transition;
+            &--open{
+                display: block;
+            }
         }
     }
 }
