--- a/src/blocks/exp/exp.scss
+++ b/src/blocks/exp/exp.scss
@@ -2,6 +2,32 @@
     &__content {
         margin: 0 0 12px 10px;
     }
+    &__titles {
+        display: flex;
+        align-items: center;
+        margin-bottom: 6px;
+        transform: scale(0.9) translateX(-12px); 
+        flex-wrap: nowrap;
+    }
+    &__title {
+        font-family: "Montserrat";
+        font-style: normal;
+        font-weight: 600;
+        font-size: 14px;
+        line-height: 18px;
+        color: $main-color;
+        background: $stitle-color;
+        text-transform: uppercase;
+        border-radius: 5px;
+        padding: 4px 28px;
+        min-width: 154px;
+        white-space: nowrap;
+    }
+    &__line {
+        background-color: $stitle-color;
+        min-width: 142px;
+        height: 1px;
+    }
     &__company {
         font-family: "Calibri";
         font-weight: 700;
@@ -33,29 +59,54 @@
         max-width: 261px;
     }
     @media screen and (max-width: 600px){
-        &__company{
-            display: none;
-            @include transition;
-            &--open{
-                display: block;
-            }
+        &__content{
+            margin: 0;
         }
-        &__post{
-            display: none;
-            @include transition;
-            &--open{
-                display: block;
-            }
+        &__titles{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            background-color: $stitle-color;
+            border-radius: 5px;
+            padding: 8px 28px;
+            cursor: pointer;
+            margin-right: -10px;
+            margin-left: 10px;
         }
-        &__date{
-            display: none;
+        &__titles::after{
+            content: "";
+            width: 10px;
+            height: 10px;
+            border-right: 2px solid $main-color;
+            border-bottom: 2px solid $main-color;
+            transform: rotate(45deg);
             @include transition;
-            &--open{
-                display: block;
-            }
         }
-        &__text{
+        &__titles--open::after {
+            content: "";
+            width: 10px;
+            height: 10px;
+            border-right: 2px solid $main-color;
+            border-bottom: 2px solid $main-color;
+            transform: rotate(225deg);
+        }
+        &__title{
+            background-color: none;
+            font-family: "Montserrat";
+            font-style: normal;
+            font-weight: 600;
+            font-size: 14px;
+            line-height: 18px;
+            color: $main-color;
+            text-transform: uppercase;
+            padding: 0;
+        }
+        &__line{
             display: none;
+        }
+        &__info{
+            display: none;
+            margin: 0 14px;
             @include transition;
             &--open{
                 display: block;
