change block langguages and deleted blocks grey and white

--- a/src/blocks/languages/languages.pug
+++ b/src/blocks/languages/languages.pug
@@ -4,22 +4,22 @@ mixin languages(modifier)
       h2.languages__title Languages
       .languages__block
         p.languages__language English
-        +grey
-        +grey
-        +grey
-        +grey
-        +grey
+        .languages__item
+        .languages__item
+        .languages__item
+        .languages__item
+        .languages__item
       .languages__block
         p.languages__language Hindi
-        +grey
-        +grey
-        +grey
-        +grey
-        +white 
+        .languages__item
+        .languages__item
+        .languages__item
+        .languages__item
+        .languages__item.languages__item--white
       .languages__block
         p.languages__language french
-        +grey
-        +grey
-        +white
-        +white
-        +white
+        .languages__item
+        .languages__item
+        .languages__item.languages__item--white
+        .languages__item.languages__item--white
+        .languages__item.languages__item--white
