--- a/src/blocks/othersk/othersk.pug
+++ b/src/blocks/othersk/othersk.pug
@@ -1,9 +1,10 @@
 mixin othersk(modifier)
   .othersk&attributes(attributes)
     .othersk__content 
-      .othersk__titles
+      //.othersk__titles
         h2.othersk__title other skills
         .othersk__line
+      +stitle('othersk','other skills')
       .othersk__info
         .othersk__skills 
           .othersk__skill  
