--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -64,3 +64,4 @@ p {
 @import "./src/blocks/edu/edu";
 @import './src/blocks/myskills/myskills';
 @import './src/blocks/othersk/othersk';
+@import './src/blocks/stitle/stitle';
