--- a/src/templates/blocks.pug
+++ b/src/templates/blocks.pug
@@ -12,3 +12,4 @@ include ../blocks/exp/exp.pug
 include ../blocks/edu/edu.pug
 include ../blocks/myskills/myskills.pug
 include ../blocks/othersk/othersk.pug
+include ../blocks/stitle/stitle.pug
