--- a/src/blocks/othersk/othersk.pug
+++ b/src/blocks/othersk/othersk.pug
@@ -1,18 +1,38 @@
 mixin othersk(modifier)
   .othersk&attributes(attributes)
     .othersk__content 
-      //.othersk__titles
-        h2.othersk__title other skills
-        .othersk__line
       +stitle('othersk','other skills')
       .othersk__info
         .othersk__skills 
+          .othersk__skill
+            <div class="pie animate no-round" style="--p:90;--c:#3B5999;">   
+              .othersk__image
+                | <svg width="25" height="30" viewBox="0 0 25 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                |   <path d="M0 0L1.75734 26.256L12.5 30L23.2427 26.256L25 0H0Z" fill="#FF7816"/>
+                |   <path d="M20.3084 7.96875H8.02381L8.32213 12.3633H20.0101L19.2971 23.0038L12.5 25.4121L5.70285 23.0038L5.47079 19.4531H8.78645L8.85272 20.4199L12.5 21.703L16.1472 20.4199L16.4455 15.8789H5.22212L4.45947 4.45312H20.5404L20.3084 7.96875Z" fill="#ECECF1"/>
+                | </svg>
+            </div>
+            p.othersk__text HTML 5
           .othersk__skill  
-            img(src="img/html.png", alt="HTML 5").othersk__image
-            p.othersk__text html 5
+            <div class="pie animate no-round" style="--p:80;--c:#3B5999;">   
+              .othersk__image
+                | <svg width="25" height="30" viewBox="0 0 25 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                |   <path d="M0 0L2.27679 27L12.5 30L22.7196 27.0019L25 0H0Z" fill="#2196F3"/>
+                |   <path d="M20.1321 8.82939L19.8446 12.2213L18.9768 22.3894L12.5 24.27L12.4946 24.2719L6.02141 22.3894L5.56962 17.0719H8.74105L8.97677 19.83L12.4964 20.8275L12.4982 20.8256L16.0232 19.8281L16.5036 15.2325L5.41784 15.2644L5.10355 12.1219L16.7696 11.9775L17.0053 8.61377L4.79105 8.64939L4.58569 5.52002H12.5H20.4143L20.1321 8.82939Z" fill="#FAFAFA"/>
+                | </svg>
+            </div>
+            p.othersk__text CSS 3
           .othersk__skill  
-            img(src="img/css.png", alt="CSS 3").othersk__image
-            p.othersk__text css 3
-          .othersk__skill  
-            img(src="img/js.png", alt="Javascript").othersk__image
-            p.othersk__text Javascript 
+            <div class="pie animate no-round" style="--p:80;--c:#3B5999;">   
+              .othersk__image
+                |   <svg width="25" height="30" viewBox="0 0 25 30" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                |     <rect width="25" height="30" fill="url(#pattern0)"/>
+                |     <defs>
+                |       <pattern id="pattern0" patternContentUnits="objectBoundingBox" width="1" height="1">
+                |         <use xlink:href="#image0_288_222" transform="translate(-0.501697) scale(0.00351515 0.0030303)"/>
+                |       </pattern>
+                |     </defs>
+                |   </svg>
+            </div>
+            p.othersk__text JavaScript 
+            
